Revise portfolio details and enhance layout
Updated portfolio content and structure for clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -3,89 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sinan Shajith | Portfolio</title>
+    <title>Sinan Shajith | Robotics & IT Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-    <h1>Sinan Shajith</h1>
-    <p>Student | Robotics | Design | Technology</p>
-</header>
+<!-- HERO SECTION -->
+<section class="hero">
+    <div class="hero-content">
+        <img src="profile.jpg" alt="Sinan Shajith" class="profile-pic">
+        <h1>Sinan Shajith</h1>
+        <p class="tagline">Robotics • Cyber Tech • IT & Design</p>
+        <p class="sub">
+            Building intelligent machines, creative tech solutions,
+            and futuristic digital systems.
+        </p>
+    </div>
+</section>
 
-<section id="about">
-    <h2>About Me</h2>
+<!-- ABOUT -->
+<section class="glass">
+    <h2>👨‍💻 About Me</h2>
     <p>
-        I am a passionate student interested in robotics, Arduino-based
-        projects, web development, and creative branding. I have built
-        multiple science exhibition projects and run a design-focused
-        startup brand called UPWEAR.
+        I am a tech-driven student passionate about robotics, Arduino-based
+        systems, cyber technology, and IT solutions. I actively participate
+        in science exhibitions and work on real-world automation and design
+        projects. I also run a creative startup brand named <b>UPWEAR</b>.
     </p>
 </section>
 
-<section id="skills">
-    <h2>Skills</h2>
-    <ul>
-        <li>Arduino & Robotics</li>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Graphic Design & Branding</li>
-        <li>Photo & Video Editing</li>
-        <li>Basic Python & Java</li>
-    </ul>
+<!-- SKILLS -->
+<section class="glass">
+    <h2>⚙ Skills & Technologies</h2>
+    <div class="skills-grid">
+        <div class="skill">🤖 Robotics & Arduino</div>
+        <div class="skill">💻 HTML, CSS, JavaScript</div>
+        <div class="skill">📡 Sensors & Automation</div>
+        <div class="skill">🎨 Graphic & Brand Design</div>
+        <div class="skill">🎥 Photo & Video Editing</div>
+        <div class="skill">🧠 Problem Solving</div>
+    </div>
 </section>
 
-<section id="projects">
-    <h2>Projects</h2>
+<!-- PROJECTS -->
+<section class="glass">
+    <h2>🚀 Featured Projects</h2>
 
-    <div class="project-card">
-        <h3>Combat Spider Bot</h3>
+    <div class="project">
+        <h3>🤖 Combat Spider Bot</h3>
         <p>
-            A multi-legged combat robot equipped with a camera, Bluetooth
-            control, turret mechanism, ultrasonic sensors, and Arduino-based
-            automation.
+            A multi-legged robotic system with Bluetooth control, turret
+            mechanism, ultrasonic sensors, and camera-based targeting.
+            Designed for defense-tech style demonstrations.
         </p>
-        <p class="tech">Tech Used: Arduino, Bluetooth, Sensors, Robotics</p>
-        <a class="btn" href="reports/combat-spider-bot.pdf" download>
-            Download Project Report
-        </a>
+        <a class="btn" href="reports/combat-spider-bot.pdf" download>Download Report</a>
     </div>
 
-    <div class="project-card">
-        <h3>Third Eye for Blind</h3>
+    <div class="project">
+        <h3>👁 Third Eye for Blind</h3>
         <p>
-            An assistive technology project that helps visually impaired
-            people detect nearby obstacles using ultrasonic sensors and
-            audio alerts.
+            Assistive technology device that detects obstacles using
+            ultrasonic sensors and alerts users via audio signals.
         </p>
-        <p class="tech">Tech Used: Arduino, Ultrasonic Sensor, Buzzer</p>
-        <a class="btn" href="reports/third-eye-for-blind.pdf" download>
-            Download Project Report
-        </a>
+        <a class="btn" href="reports/third-eye-for-blind.pdf" download>Download Report</a>
     </div>
 
-    <div class="project-card">
-        <h3>UPWEAR Branding Project</h3>
+    <div class="project">
+        <h3>🧢 UPWEAR – Brand & IT Project</h3>
         <p>
-            A Gen-Z focused branding startup involving logo design,
-            sticker concepts, social media identity, and digital marketing.
+            A Gen-Z focused brand involving logo systems, cyber-aesthetic
+            designs, stickers, social media presence, and digital strategy.
         </p>
-        <p class="tech">Tech Used: Branding, Graphic Design, Marketing</p>
-        <a class="btn" href="reports/upwear-branding.pdf" download>
-            Download Project Report
-        </a>
+        <a class="btn" href="reports/upwear-branding.pdf" download>Download Report</a>
     </div>
-
 </section>
 
-<section id="contact">
-    <h2>Contact</h2>
+<!-- CONTACT -->
+<section class="glass contact">
+    <h2>📬 Contact</h2>
     <p>Email: <a href="mailto:upwear.team@gmail.com">upwear.team@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
     <p>Instagram: <a href="https://instagram.com/upwear.in" target="_blank">@upwear.in</a></p>
+    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
 </section>
 
 <footer>
-    <p>© 2025 Sinan Shajith</p>
+    © 2025 Sinan Shajith • Built with GitHub Pages
 </footer>
 
 <script src="script.js"></script>
