--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         I am a tech-driven student passionate about robotics, Arduino-based
         systems, cyber technology, and IT solutions. I actively participate
         in science exhibitions and work on real-world automation and design
-        projects. I also run a creative startup brand named <b>UPWEAR</b>.
+        projects.
     </p>
 </section>
 
@@ -81,9 +81,9 @@
 <!-- CONTACT -->
 <section class="glass contact">
     <h2>📬 Contact</h2>
-    <p>Email: <a href="mailto:upwear.team@gmail.com">upwear.team@gmail.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/upwear.in" target="_blank">@upwear.in</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    <p>Email: <a href="mailto:sinushajith@gmail.com">sinushajith@gmail.com</a></p>
+    <p>Instagram: <a href="https://instagram.com/sinan.shajith" target="_blank">@sinan.shajith</a></p>
+    <p>GitHub: <a href="https://github.com/sinan2702" target="_blank">github.com/Sinan2702</a></p>
 </section>
 
 <footer>
