--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<canvas id="particle-canvas"></canvas>
 
 <!-- HERO SECTION -->
 <section class="hero">
