--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         projects.
     </p>
 </section>
-
+<div class="photo-section">
+  <img src="yourphoto.jpg" alt="My Photo">
+  <a href="resume.pdf" target="_blank" class="resume-btn">View Resume</a>
+</div>
 <!-- SKILLS -->
 <section class="glass">
     <h2>⚙ Skills & Technologies</h2>
